--- a/src/components/DisplayFlex/styles.module.css
+++ b/src/components/DisplayFlex/styles.module.css
@@ -1,4 +1,4 @@
-.twoColumns {
+.DisplayFlex {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,6 +9,6 @@
   overflow: scroll;
 }
 
-.twoColumns::-webkit-scrollbar {
+.DisplayFlex::-webkit-scrollbar {
   display: none;
 }
