--- a/src/theme/DocRoot/Layout/Sidebar/styles.module.css
+++ b/src/theme/DocRoot/Layout/Sidebar/styles.module.css
@@ -9,12 +9,14 @@
 
 @media (min-width: 997px) {
   .docSidebarContainer {
+    position: fixed;
+    height: 100vh;
     display: block;
     width: var(--doc-sidebar-width);
     margin-top: calc(-1 * var(--ifm-navbar-height));
     border-right: 1px solid var(--ifm-toc-border-color);
     will-change: width;
-    transition: width var(--ifm-transition-fast) ease;
+    transition: width var(--ifm-transition-slow) ease;
     clip-path: inset(0);
   }
 
