not bad double bars

--- a/src/theme/DocRoot/Layout/Main/styles.module.css
+++ b/src/theme/DocRoot/Layout/Main/styles.module.css
@@ -1,22 +1,22 @@
 .docMainContainer {
   display: flex;
   width: 100%;
-  padding-left: 400px;
+  padding-left: 500px;
 }
 
 @media (min-width: 997px) {
   .docMainContainer {
     flex-grow: 1;
-    max-width: calc(100% - var(--doc-sidebar-width));
+    max-width: 85%;
   }
 
   .docMainContainerEnhanced {
-    max-width: calc(100% - var(--doc-sidebar-hidden-width));
+    max-width: 85%;
   }
 
-  .docItemWrapperEnhanced {
+  /* .docItemWrapperEnhanced {
     max-width: calc(
       var(--ifm-container-width) + var(--doc-sidebar-width)
     ) !important;
-  }
+  } */
 }
