--- a/src/theme/DocRoot/Layout/Sidebar/styles.module.css
+++ b/src/theme/DocRoot/Layout/Sidebar/styles.module.css
@@ -1,5 +1,5 @@
 :root {
-  --doc-sidebar-width: 400px;
+  --doc-sidebar-width: 450px;
   --doc-sidebar-hidden-width: 30px;
 }
 
@@ -18,6 +18,11 @@
     will-change: width;
     transition: width var(--ifm-transition-slow) ease;
     clip-path: inset(0);
+    opacity: 0.4;
+  }
+
+  .docSidebarContainer:hover {
+    opacity: 1;
   }
 
   .docSidebarContainerHidden {
