--- a/src/theme/DocRoot/Layout/Main/styles.module.css
+++ b/src/theme/DocRoot/Layout/Main/styles.module.css
@@ -1,17 +1,18 @@
 .docMainContainer {
   display: flex;
   width: 100%;
-  padding-left: 500px;
+  padding: 0 2rem;
 }
 
 @media (min-width: 997px) {
   .docMainContainer {
     flex-grow: 1;
-    max-width: 85%;
+    max-width: 100%;
+    padding-left: 36rem;
   }
 
   .docMainContainerEnhanced {
-    max-width: 85%;
+    max-width: 100%;
   }
 
   /* .docItemWrapperEnhanced {
