--- a/src/theme/DocRoot/Layout/Sidebar/styles.module.css
+++ b/src/theme/DocRoot/Layout/Sidebar/styles.module.css
@@ -11,12 +11,10 @@
   .docSidebarContainer {
     position: fixed;
     height: 100vh;
-    margin-left: 2rem;
-    padding: 1rem 0 0;
+    padding: 1rem 0 0 1rem;
     display: block;
     width: var(--doc-sidebar-width);
     margin-top: calc(-1 * var(--ifm-navbar-height));
-    border-right: 1px solid var(--ifm-toc-border-color);
     will-change: width;
     transition: width var(--ifm-transition-slow) ease;
     clip-path: inset(0);
@@ -25,6 +23,29 @@
 
   .docSidebarContainer:hover {
     opacity: 1;
+    animation: fadeIn 0.3s ease-in-out;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0.4;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  .docSidebarContainer:not(:hover) {
+    animation: fadeOut 0.1s ease-in-out;
+  }
+
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0.4;
+    }
   }
 
   .docSidebarContainerHidden {
